2007-01-09 Chris Morley

	*src/obconversion.cpp, include/openbabel/obconversion.h: Mitigate
	some of the uncertainties in writing multi-molecule files.
	pointed out by Jean Brefort, including bug 1644241.
	Added SetLast as an alternative name for SetOneObjectedOnly.
	Added documentation to GetOutputIndex().
	
2007-01-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: scale bond lentghs to 30 (using the
	first molecule) and enable write support.

2007-01-25  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/cdxmlformat.cpp: add some stereochemistry and initial
	write support (not enabled).

2007-01-24  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/xml/Makefile.am: add cdxmlformat.
	* src/formats/xml/cdxmlformat.cpp: make it basically work.
	* src/formats/xml/xml.cpp: fix a memory leak.

2007-01-23  Donald E. Curtis <dcurtis3@sourceforge.net>

	* tools/obmm.cpp: Added check for cin.eof resolving bug 1639880.

2007-01-22  Donald E. Curtis <dcurtis3@sourceforge.net>

	* include/openbabel/bond.h: Added const versions of GetBeginAtom and
	GetEndAtom.

	* include/openbabel/atom.h: Added const version of GetVector.  Required
	changing _v to mutable.

	* src/atom.cpp: Added implementation of GetVector.

	* include/openbabel/math/vector3.h: Added const to function definition of
	AsArray function.

2007-01-17  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/Distribution: Added all of the remaining files to the
	installer script so that you can now make an installer directly after
	compiling the relevant projects (OBGUII and OBComLn). Have also
	checked in the example files included with the Windows distribution.

2007-01-16  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/mol.h, src/*: Documentation updates.

	* include/openbabel/Makefile.am: Make sure pluginiter.h is included.

2007-01-14  Geoffrey Hutchison  <babel@geoffhutchison.net>
